Added time service and fix typo in innovation.

--- a/_config/innovation.conf
+++ b/_config/innovation.conf
@@ -12,7 +12,7 @@ chairman = Andrés J. Díaz
 summary  = The cloud research area is focused on provide software and
 	explore new ideas on the field of distributed systems and cloud
 	computing and services, including comunication protocols, data sharding
-	or larg-network management systems.
+	or large-network management systems.
 
 [Social]
 image    = /images/innovation/social.jpg
