Fix ogarcia's blog URLs and position tag.

--- a/_config/staff.conf
+++ b/_config/staff.conf
@@ -32,7 +32,7 @@ about.me       = As a fan of sci-fi tv series, I think that the computer science
 
 
 [Óscar García]
-planet.blog    = http://lemming.moire.org/feed/
+planet.blog    = http://entropia.moire.org/feed/
 planet.tweet   = identica:ogarcia
 planet.code    = github:ogarcia
 link.facebook  = http://www.facebook.com/amhairghin
@@ -40,9 +40,9 @@ link.twitter   = http://twitter.com/amhairghin
 link.identica  = http://identi.ca/ogarcia
 link.linkedin  = http://www.linkedin.com/in/oamor
 products       = ohloh:ogarcia
-about.blog     = http://lemming.moire.org/
+about.blog     = http://entropia.moire.org/
 about.avatar   = http://gravatar.com/avatar/4df42f4f2490f92e6a643ea1c6a2f0d4?s=40
-about.position = Shamman of Systems
+about.position = Systems Shamman
 about.me       = Since I learn some magic spells, like POSIX, virtualization
     or networking, I become to a 1st level wizard in Connectical. In my
     free time I was the head developer of Galician Oficial Linux and
