Adding security area.

--- a/_config/innovation.conf
+++ b/_config/innovation.conf
@@ -6,17 +6,21 @@ summary  = The embedded research area focusses on matters regarding new
 	systems.
 
 [Cloud]
-image    = /images/innovation/cloud.jpg
 summary  = The cloud research area is focused on provide software and
 	explore new ideas on the field of distributed systems and cloud
 	computing and services, including comunication protocols, data sharding
 	or large-network management systems.
 
 [Social]
-image    = /images/innovation/social.jpg
 summary  = The social research area has as main goal to investigate the
 	relationship between real-world and social networks, market implications
 	and models and methods to understand human social networks, including
 	presence in already existing networks as also provide ideas to
 	develop new ones.
+
+[Security]
+summary  = The security research area works in the field of systems security
+	and cryptography, from a theorical point of view to practical
+	applications, including reports and development of new ideas to increase
+	the security of applications, systems and communications.
 
