Updated ogarcia's blog URL.

--- a/_config/staff.conf
+++ b/_config/staff.conf
@@ -32,7 +32,7 @@ about.me       = As a fan of sci-fi tv series, I think that the computer science
 
 
 [Óscar García]
-planet.blog    = http://entropia.moire.org/feed/
+planet.blog    = http://ogarcia.connectical.com/feed/
 planet.tweet   = identica:ogarcia
 planet.code    = github:ogarcia
 link.facebook  = http://www.facebook.com/amhairghin
@@ -40,7 +40,7 @@ link.twitter   = http://twitter.com/amhairghin
 link.identica  = http://identi.ca/ogarcia
 link.linkedin  = http://www.linkedin.com/in/oamor
 products       = ohloh:ogarcia
-about.blog     = http://entropia.moire.org/
+about.blog     = http://ogarcia.connectical.com/
 about.avatar   = http://gravatar.com/avatar/4df42f4f2490f92e6a643ea1c6a2f0d4?s=40
 about.position = Systems Shamman
 about.me       = Since I learn some magic spells, like POSIX, virtualization
