Move aperez to github

--- a/_config/staff.conf
+++ b/_config/staff.conf
@@ -1,6 +1,6 @@
 
 [Adrián Pérez]
-planet.code    = gitorious:aperez
+planet.code    = github:aperezdc
 planet.blog    = http://hario.wordpress.com/category/connectical/feed/
 planet.tweet   = identica:aperez
 products       = ohloh:aperez
