Add new images and change descriptions.
- Change the research area descriptions
- Add new header images.

--- a/_config/innovation.conf
+++ b/_config/innovation.conf
@@ -1,15 +1,17 @@
-[Embedded]
-image    = /images/innovation/embedded.jpg
-summary  = The embedded research area focusses on matters regarding new
+[Embedded &amp; SoC]
+summary  = The embedded &amp; SoC research area focusses on matters regarding new
 	directions in low-power and small devices, including ARM technology
 	applied to standard datacenters, mobile devices and also comodity
-	systems.
+	systems. We are also researching in low-cost exploration systems in the
+	sea, troposphere and low Earth orbit (LEO).
 
-[Cloud]
-summary  = The cloud research area is focused on provide software and
+[Cloud &amp; Scalability]
+summary  = The cloud &amp; scalability research area is focused on provide software and
 	explore new ideas on the field of distributed systems and cloud
 	computing and services, including comunication protocols, data sharding
-	or large-network management systems.
+	or large-network management systems. We are developing smart systems
+	oriented to autoreplicate services and maximize the online availability
+	according to an automatic disaster response.
 
 [Social]
 summary  = The social research area has as main goal to investigate the
