--- a/_config/innovation.conf
+++ b/_config/innovation.conf
@@ -1,12 +1,12 @@
-[Embedded &amp; SoC]
+[Embedded]
 summary  = The embedded &amp; SoC research area focusses on matters regarding new
 	directions in low-power and small devices, including ARM technology
 	applied to standard datacenters, mobile devices and also comodity
 	systems. We are also researching in low-cost exploration systems in the
 	sea, troposphere and low Earth orbit (LEO).
 
-[Cloud &amp; Scalability]
-summary  = The cloud &amp; scalability research area is focused on provide software and
+[Scalability]
+summary  = The scalability research area is focused on provide software and
 	explore new ideas on the field of distributed systems and cloud
 	computing and services, including comunication protocols, data sharding
 	or large-network management systems. We are developing smart systems
