Staff Info Updated
Óscar García changes your blog to new URL.

--- a/_config/staff.conf
+++ b/_config/staff.conf
@@ -32,7 +32,7 @@ about.me       = As a fan of sci-fi tv series, I think that the computer science
 
 
 [Óscar García]
-planet.blog    = http://ogarcia.connectical.com/en/feed/
+planet.blog    = http://ogarcia.connectical.com/rss
 planet.tweet   = identica:ogarcia
 planet.code    = github:ogarcia
 link.facebook  = http://www.facebook.com/amhairghin
