--- a/_config/about.conf
+++ b/_config/about.conf
@@ -52,3 +52,18 @@ summary = The Connectical infrastructure is a number of distributed nodes
 	any resources. Neverthless we maintain a subnetwork of ARM systems for
 	research purposes.</dd>
 
+[Contact]
+summary = You can contact us by several ways, but email or jabber muc room
+	is preferred. We'd like to know your opinion about the lab and
+	suggestions for new and amazing projects.
+	<table class="table-condensed">
+	<tr><th><span class="icon-envelope"></span> Email</th><td><a
+	href="mailto:info@connectical.com">info@connectical.com</a></td></tr>
+	<tr><th><span class="icon-comment-alt"></span> Chat</th><td><a id="room_link" data-toggle="modal"
+	href="http://www.speeqe.com/room/connectical@conf.netlab.cz/">connectical@conf.netlab.cz</a></td></tr>
+	<tr><th><span class="icon-twitter"></span> twitter</th><td><a
+	href="//twitter.com/connectical">@connectical</a></td></tr>
+	<tr><th><span class="icon-group"></span> Meet up</th><td>We'd like to socialize, don't hesitate to
+	contact us to meet up in any city where Connectical is present (Madrid,
+	Barcelona, Helsinki...)</td></tr>
+	</table>
