Change some config issues.

--- a/_config/services.conf
+++ b/_config/services.conf
@@ -13,29 +13,29 @@ elements = mailto:sysadmin@lists.connectical.com,sysadmin,A general
 	general discussion list about embedded devices and plug computing.
 
 
-[Time Server]
-summary = The time server allows a number of remote machines to keep their
-	clocks synchronized, using NTP or TAI. The time server works for IPv4 and
-	IPv6 on both protocols (NTP and TAI), and it's directly synchronized
-	with NTP stratum-0 source.
-icon = icon-time
-elements = http://time.connectical.com,time.connectical.com,Stratum-1 NTP
-	server as well as TAI64, synchronized using <acronym title="Pulse per
-	seconds">PPS</acronym> source.
-
-
-
-[ARM Hosting]
-summary = The ARM hosting is created over a cluster of different models of
-	ARM hardware, from <a href="http://olimex.com">Olimex</a> to <a
-	href="http://raspberrypi.org">Raspberry Pi</a>. The ARM hosting is
-	designed to be used as laboratory for people who works developing
-	software for ARM based boards.
-icon = icon-laptop
-elements = http://arm.connectical.com,arm.connectical.com,We provide a number of
-	ARM hardware opened to community projects as demand, including ARM11,
-	ARMv7 and ARM9 based boards.
-
+#[Time Server]
+#summary = The time server allows a number of remote machines to keep their
+#	clocks synchronized, using NTP or TAI. The time server works for IPv4 and
+#	IPv6 on both protocols (NTP and TAI), and it's directly synchronized
+#	with NTP stratum-0 source.
+#icon = icon-time
+#elements = http://time.connectical.com,time.connectical.com,Stratum-1 NTP
+#	server as well as TAI64, synchronized using <acronym title="Pulse per
+#	seconds">PPS</acronym> source.
+#
+#
+#
+#[ARM Hosting]
+#summary = The ARM hosting is created over a cluster of different models of
+#	ARM hardware, from <a href="http://olimex.com">Olimex</a> to <a
+#	href="http://raspberrypi.org">Raspberry Pi</a>. The ARM hosting is
+#	designed to be used as laboratory for people who works developing
+#	software for ARM based boards.
+#icon = icon-laptop
+#elements = http://arm.connectical.com,arm.connectical.com,We provide a number of
+#	ARM hardware opened to community projects as demand, including ARM11,
+#	ARMv7 and ARM9 based boards.
+#
 [Keyserver]
 summary = The keyserver service runs a <acronym title="Simple Key
 	Server">SKS</acronym> service compatible for OpenPGP keys, used to
