Add Daniel staff config.

--- a/_config/staff.conf
+++ b/_config/staff.conf
@@ -50,21 +50,21 @@ about_me       = Since I learn some magic spells, like POSIX, virtualization
     free time I was the head developer of Galician Oficial Linux and
     the official translator of Gallery2 to spanish.
 
-#[Daniel Vidal]
-#planet_blog    = http://vidimensional.wordpress.com/feed/
-#planet_tweet   = vidimensional
-#planet_github  = Vidimensional
-#link_twitter   = http://twitter.com/vidimensional
-#link_linkedin  = http://www.linkedin.com/in/danielvidalrubia
-#link_github    = http://github.com/Vidimensional
-##products       = ohloh:
-#about_blog     = http://vidimensional.wordpress.com/
-#about_avatar   = http://gravatar.com/avatar/806022de105f28b8d974074cd048e576
-#about_position = It's the motherfucking Vidi
-#about_me       = Since I was a little boy I always been amazed about those magical
-#	things called computers. Because of that I decided to learn the magical secrets
-#	that them hide, through self-taught experimenting and through formal academic
-#	studies.
-#
+[Daniel Vidal]
+planet_blog    = http://vidimensional.wordpress.com/feed/
+planet_tweet   = vidimensional
+planet_github  = Vidimensional
+link_twitter   = http://twitter.com/vidimensional
+link_linkedin  = http://www.linkedin.com/in/danielvidalrubia
+link_github    = http://github.com/Vidimensional
+#products       = ohloh:
+about_blog     = http://vidimensional.wordpress.com/
+about_avatar   = http://gravatar.com/avatar/806022de105f28b8d974074cd048e576
+about_position = It's the motherfucking Vidi
+about_me       = Since I was a little boy I always been amazed about those magical
+	things called computers. Because of that I decided to learn the magical secrets
+	that them hide, through self-taught experimenting and through formal academic
+	studies.
+
 
 # vim:ft=dosini:
