--- a/_config/about.conf
+++ b/_config/about.conf
@@ -63,6 +63,8 @@ summary = You can contact us by several ways, but email or jabber muc room
 	href="http://www.speeqe.com/room/connectical@conf.netlab.cz/">connectical@conf.netlab.cz</a></td></tr>
 	<tr><th><span class="icon-twitter"></span> twitter</th><td><a
 	href="//twitter.com/connectical">@connectical</a></td></tr>
+	<tr><th><span class="icon-facebook-sign"></span> facebook</th><td><a
+	href="//facebook.com/connectical">connectical</a></td></tr>
 	<tr><th><span class="icon-group"></span> Meet up</th><td>We'd like to socialize, don't hesitate to
 	contact us to meet up in any city where Connectical is present (Madrid,
 	Barcelona, Helsinki...)</td></tr>
