Update URLs for Adrian's blog

--- a/_config/staff.conf
+++ b/_config/staff.conf
@@ -1,8 +1,8 @@
 
 [Adrián Pérez]
 github   = aperezdc
-rss      = http://hario.wordpress.com/category/connectical/feed/
-blog     = http://hario.wordpress.com/
+rss      = http://perezdecastro.org/connectical.atom
+blog     = http://perezdecastro.org
 twitter  = aperezdc
 avatar   = http://gravatar.com/avatar/24a7e6e3b06ea9e2993969dce59d0f2e
 position = Galaxywide Sysadmin Officer
