Set a valid URL for Daniel's blog

--- a/_config/staff.conf
+++ b/_config/staff.conf
@@ -42,7 +42,7 @@ about    = Since I learn some magic words, like POSIX, virtualization
 [Daniel Vidal]
 github   = Vidimensional
 rss      = http://vidimensional.wordpress.com/feed/
-blog     = http://vidimensional.connectical.com/
+blog     = http://vidimensional.wordpress.com/
 twitter  = vidimensional
 linkedin = danielvidalrubia
 avatar   = http://gravatar.com/avatar/806022de105f28b8d974074cd048e576
